--- a/detector_DNN.ipynb
+++ b/detector_DNN.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed5e8f3",
+   "id": "3b1ea533",
    "metadata": {},
    "source": [
     "### Approach 2: Deep Neural Net w/ SMOTE "
@@ -637,16 +637,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bb5dec",
+   "id": "59ca988c",
    "metadata": {},
    "source": [
-    "#### SMOTE = Synthetic Minnority Oversampling Technique "
+    "#### SMOTE = Synthetic Minority Oversampling Technique "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "47c5365b",
+   "id": "72a890da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a881d6",
+   "id": "8bd02de1",
    "metadata": {},
    "outputs": [],
    "source": []
