--- a/detector_DNN.ipynb
+++ b/detector_DNN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "344b1d52",
    "metadata": {
     "scrolled": true
@@ -42,6 +42,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, f1_score, recall_score\n",
+    "from collections import Counter\n",
     "np.random.seed(5)"
    ]
   },
@@ -306,13 +307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "1dd2b50a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original data shape: Counter({0: 284315, 1: 492})\n",
+      "Post-SMOTE data shape: Counter({0: 284315, 1: 284315})\n"
+     ]
+    }
+   ],
    "source": [
     "y = data['Class']  # holds the class label for each transaction \n",
-    "X = data.drop(['Class'], axis = 1)  # holds all other features of transaction except class label"
+    "X = data.drop(['Class'], axis = 1)  # holds all other features of transaction except class label\n",
+    "\n",
+    "\n",
+    "# Get a feel for the class distribution, notice how small the proportion of fraud is \n",
+    "fraud_count = Counter(y)\n",
+    "print(f\"Original data shape: {fraud_count}\")\n",
+    "\n",
+    "# Generate SMOTE-augmented data samples as well\n",
+    "oversampler = SMOTE()\n",
+    "X2, y2 = oversampler.fit_resample(X,y)\n",
+    "oversampled_counts = Counter(y2)\n",
+    "print(f\"Post-SMOTE data shape: {oversampled_counts}\")\n"
    ]
   },
   {
@@ -629,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1ea533",
+   "id": "01e67dab",
    "metadata": {},
    "source": [
     "### Approach 2: Deep Neural Net w/ SMOTE "
@@ -637,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59ca988c",
+   "id": "13cd2367",
    "metadata": {},
    "source": [
     "#### SMOTE = Synthetic Minority Oversampling Technique "
@@ -646,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "72a890da",
+   "id": "2931483d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bd02de1",
+   "id": "8ff4b83a",
    "metadata": {},
    "outputs": [],
    "source": []
